@@ -1,3 +1,8 @@
+2007-04-11  Abel Cheung  <abelcheung@gmail.com>
+
+	* wp-scorerender.php:
+	Drop support for configurable markup, people probably don't need that.
+
 === ScoreRender 0.1.2 ===
 
 2007-03-30  Abel Cheung  <abelcheung@gmail.com>
